[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems <jo3mccain@scattered-systems.com>"]
categories = ["toolkits"]
description = "A highly modular blockchain framework designed for the Scattered-Systems Ecosystem"
edition = "2021"
keywords = ["blockchain", "devtool", "scsys"]
license = "MIT"
name = "cli"
repository = "https://github.com/scattered-systems/disaronno.git"
version = "0.1.0"

[[bin]]
bench = false
name = "cli"
path = "src/main.rs"
test = false

[dependencies]
clap = "3.1.18"
config = "0.13.1"
futures = "0.3.21"
glob = "0.3.0"
hyper = { features = ["full"], version = "0.14.19" }
log = "0.4.17"
once_cell = "1.12.0"
tokio = { features = ["full"], version = "1.19.2" }

[dependencies.disaronno]
version = "0.1.4"