[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems <jo3mccain@scattered-systems.com>"]
description = "A highly modular blockchain framework designed for the Scattered-Systems Ecosystem"
edition = "2021"
license = "MIT"
name = "disaronno"
repository = "https://github.com/scattered-systems/disaronno.git"
version = "0.1.4"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[[test]]
name = "simple"
path = "tests/simple.rs"

[dependencies]
chrono = "0.4.19"
hyper = { features = ["full"], version = "0.14.19" }
libp2p = { features = ["dns-tokio"], version = "0.44.0" }
tokio = { features = ["full"], version = "1.18.2" }
serde = { features = ["derive"], version = "1.0.137" }
serde_json = "1.0.81"


[dependencies.acme]
version = "0.1.5"