[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems <jo3mccain@scattered-systems.com>"]
categories = ["blockchain", "toolkit"]
description = "Disaronno is a blockchain framework designed to support the Scattered-Systems Ecosystem"
edition = "2021"
keywords = ["blockchain", "devtool", "scsys"]
license = "MIT"
name = "disaronno"
readme = "README.md"
repository = "https://github.com/scattered-systems/disaronno.git"
version = "0.1.5"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[features]
default = ["networking"]
macros = ["disaronno-macros"]
networking = ["libp2p/default", "libp2p/dns-tokio", "libp2p/tcp-tokio"]

[[test]]
name = "test"
path = "tests/test.rs"

[dependencies]
blake2 = "0.10.4"
bson = { features = ["chrono-0_4", "serde_with"], version = "2.2.0" }
chrono = "0.4.19"
config = "0.13.1"
futures = "0.3.21"
glob = "0.3.0"
hex = "0.4.3"
libp2p = { features = ["dns-tokio", "tcp-tokio"], version = "0.45.1" }
log = "0.4.17"
once_cell = "1.12.0"
pretty_env_logger = "0.4.0"
serde = { features = ["derive"], version = "1.0.137" }
serde_json = "1.0.81"
sha2 = "0.10.2"

[dependencies.disaronno-macros]
optional = true
path = "../macros"
version = "0.1.0"