[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems <jo3mccain@scattered-systems.com>"]
description = "Procedural macros for intended for Disaronno, the blockchain toolkit from Scattered-Systems"
edition = "2021"
keywords = ["blockchain", "devtool", "scsys"]
license = "MIT"
name = "disaronno-macros"
readme = "README.md"
repository = "https://github.com/scattered-systems/disaronno.git"
version = "0.1.0"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[[test]]
name = "simple"
path = "tests/test.rs"

[dependencies]

